X X
    * Add Chestplate + Sharpness = reflect damage
    * Add Sword + Silk Touch = itemize (right-click creature/boat/minecart/primedTNT to drop item)
    * Add Hoe + Punch = grow animal
    * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
    * Add Leggings + Feather Falling = surface (triple-tap shift)
    * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops
    * Enhance Bow + Respiration = stapled arrows: try TNT, water, lava (spawn egg, potions...)
    * Enhance Shears + Looting, now can be used to acquire saddle from saddled pigs
    * Enhance Hoe + Fire Protection = sensor, now can show information on entities
    * Partial (warning: incomplete!) WorldGuard support
      Not all protections are respected! (see ticket 4)

2012-02-22  0.6.4
    * Add support for enabling/disabling effects in config.yml
    * Add Leggings + Punch = rocket launch pants (double-tap shift)
    * Add Flint & Steel + Blast Protection = anti-creeper (cancel nearby explosion)
    * Add Flint & Steel + Punch = cannon
    * Add Chestplate + Silk Touch = cactus protection (no contact damage)
    * Add Axe + Aqua Affinity = slowness effect (like Bow, but melee attack) (ticket 1)
    * Add Axe + Respiration = generate tree
    * Add Hoe + Fire Protection = sensor
    * Add support for enchantments on RP2/IC2/other items (see config.yml)
    * Change Boots + Punch = hover jump, now activated by double-tapping shift
      Fixes conflict with Shift for sneaking
    * Improve Shovel + Power = excavate, now can excavate sand by default
    * Improve potion effects, now applies to all living entities and uses new API
    * Fix Pickaxe + Power, now only breaks blocks when left-clicking

2012-02-18  0.5.7
    * Add Bow + Respiration = stapled arrows (attach adjacent item in inventory)
    * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
    * Add Sword + Fire Protection = return to player when dropped in lava